feat: V1.1 - SSR and SSG

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,19 +2,7 @@
   <a
     class="hover:underline px-4 py-1 rounded-lg border-3 border-transparent"
     routerLinkActive="bg-slate-600"
-    routerLink="about"
-    >About</a
-  >
-  <a
-    class="hover:underline px-4 py-1 rounded-lg border-3 border-transparent"
-    routerLinkActive="bg-slate-600"
-    routerLink="pricing"
-    >Pricing</a
-  >
-  <a
-    class="hover:underline px-4 py-1 rounded-lg border-3 border-transparent"
-    routerLinkActive="bg-slate-600"
-    routerLink="contact"
-    >Contact</a
+    routerLink="/pokemons/page/1"
+    >Pokémons</a
   >
 </nav>
